feat: Enhance VerifAI forensic analysis capabilities
Refactors system instructions for Gemini AI to adopt a more sophisticated forensic persona. Improves error handling and user feedback for failed analysis. Introduces a decorative background grid and refined UI animations for a more engaging user experience. Updates Vercel configuration for cleaner URLs and redirects.

--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- Importante: Este script permite que la aplicación se inicie en Vercel -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
